--- a/index.html
+++ b/index.html
@@ -22,14 +22,11 @@
             <p v-if="inStock">In Stock</p>
             <p v-else>Out of Stock</p>
             <ul>
-              <li v-for="detail in details">{{ detail }}</li>
+              <li v-for="detail in details">{{detail}}</li>
             </ul>
-            <!-- solution -->
             <ul>
-              <li v-for="(size, index) in sizes" :key="index">{{size }}</li>
+              <li v-for="size in sizes">{{size}}</li>
             </ul>
-            <!-- solution -->
-            <div v-for="variant in variants" :key="variant.id">{{ variant.color }}</div>
           </div>
         </div>
       </div>
